fixed the issue with the scrollbar

--- a/src/css/SideMenu.css
+++ b/src/css/SideMenu.css
@@ -29,7 +29,6 @@
 
 .pro-sidebar {
   color: gray;
-  height: 100%;
   width: 270px;
   min-width: 270px;
   text-align: left;
@@ -55,7 +54,6 @@
       top: 0;
       z-index: 100; }
     .pro-sidebar > .pro-sidebar-inner > .pro-sidebar-layout {
-      height: 100%;
       overflow-y: auto;
       overflow-x: hidden;
       position: relative;
